add header layout

--- a/app/views/static_pages/account.html.erb
+++ b/app/views/static_pages/account.html.erb
@@ -1,9 +1,3 @@
-<!DOCKTYPE html>
-<html>
-  <head>
-    <title>account</title>
-  </head>
-  <body>
-    <p>This page will be account page</p>
-  </body>
-</html>
+<% provide(:title, "account") %>
+<p>This page will be account page</p>
+  
