--- a/app/views/static_pages/members.html.erb
+++ b/app/views/static_pages/members.html.erb
@@ -1,9 +1,2 @@
-<!DOCKTYPE html>
-<html>
-  <head>
-    <title>Home | Daily Report App</title>
-  </head>
-  <body>
-    <p>This page will be members page</p>
-  </body>
-</html>
+<% provide(:title, "members") %>
+<p>This page will be account page</p>
