--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,9 @@
  *
  */
 
- @import "bootstrap";
+// Custom bootstrap variables must be set or imported *before* bootstrap.
+@import "bootstrap-sprockets";
+@import "bootstrap";
 
  @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -20,17 +22,57 @@
   box-sizing: border-box;
 }
 
-
+* {
+  font-family: serif;
+  list-style: none;
+}
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   margin-bottom: 15px;
   @include box_sizing;
 }
+.nav {
+  li {
+    padding-right: 15px;
+  }
+}
+
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: black;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
 
 input {
   height: auto !important;
 }
+
+body {
+  padding-top: 50px;
+  background-image: url('background1.jpg');
+  height: 400px;
+  background-size: cover;
+  color: #fffff0;
+  .fill_form {
+    margin: 0 auto;
+    text-align: center;
+    backdrop-filter: blur(10px);
+    .form {
+      
+    }
+  }
+}
+
+form {
+  text-align: center;
+}
+
 
 /*error form*/
 #error_explanation {
