--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,19 @@
     <title><%= yield(:title) %> | Daily Work Report</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>    
   </head>
   <body>
-    <%= render 'layouts/header' %>
-    <div class="container" style="margin-top: 30px;">
-      <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
-    </div>
+    <section>
+      <%= render 'layouts/header' %>
+      <div class="container" style="margin-top: 30px;">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>  
+        <%= yield %>
+        <%= debug(params) if Rails.env.development? %>
+      </div>
+    </section>  
   </body>
 </html>
