--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,24 +1,25 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
+<div class="container fill_form">
+  <h1>アカウント登録</h1>
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3 form">
+      <%= form_with(model: @user, local:true ) do |f| %>
+        <%= render 'shared/error_messages' %>
 
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
+        <%= f.label :名前 %>
+        <%= f.text_field :name, class: 'form-control' %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
+        <%= f.label :email %>
+        <%= f.email_field :email, class: 'form-control' %>
 
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+        <%= f.label :パスワード %>
+        <%= f.password_field :password, class: 'form-control' %>
 
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
+        <%= f.label :パスワード　, "パスワード(確認用)" %>
+        <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+        <%= f.submit "アカウントを作成する", class: "btn btn-default" %>
+      <% end %>
+    </div>
   </div>
-</div>
+</div>  
