--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         </li>
         <% if logged_in? %>
           <li class="members">
-            <%= link_to("メンバーズ", members_url) %>
+            <%= link_to("メンバーズ", users_path) %>
           </li>
           <li class="dropdown"> 
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">アカウント<b class="caret"></b></a>
@@ -18,7 +18,7 @@
                 <%= link_to("プロフィール", current_user) %>
               </li>
               <li id="accout">
-              　<%= link_to("設定", '#') %>
+              　<%= link_to("設定", edit_user_path(current_user)) %>
             　</li>
               <li id="accout">
          　　　　 <%= link_to("ログアウト", logout_path, {method: :delete}) %>
