complete comment controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,9 @@ input, textarea, select, .uneditable-input {
   }
 }
 
+.header {
+  margin-left: 50px;
+}
 #logo {
   float: left;
   margin-right: 10px;
