--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header class="navbar navbar-fixed-top bg-light navbar-default">
-    <div class-"container">
+    <div class=" header">
       <%= link_to "Daily Report", root_path, id: "logo" %>
     </div>
     <nav>
