--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -5,5 +5,12 @@
     <%= micropost.content %>
     <%= image_tag micropost.display_image if micropost.image.attached? %>
   </span>
-  <span><%= time_ago_in_words(micropost.created_at) %>ago.</span> 
+  <span><%= time_ago_in_words(micropost.created_at) %>前に投稿されました.</span>
+  <% if current_user?(micropost.user) %>
+    <%= link_to "削除", micropost, method: :delete, data: { confirm: "削除を実行しますか？"} %>
+  <% end %>
+  <li id="detail">
+    <%= link_to("レポート詳細", micropost) %>
+  </li>
+
 </li>
