--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,11 @@
 
 <%= will_paginate %>
 
+<%= form_tag(users_path, :method => 'get') do %>
+  <%= text_field_tag :search %>
+  <%= submit_tag 'メンバーを検索', :name => nil %>
+<% end %>
+
 <ul class="users">
   <% @users.each do |user| %>
     <li>
