--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 }
 
 * {
-  font-family: serif;
+  font-family: sans-serif;
   list-style: none;
 }
 input, textarea, select, .uneditable-input {
@@ -59,6 +59,7 @@ input {
 body {
   padding-top: 50px;
   //background-image: url('background1.jpg');
+  background-color: #b3d4fc;
   height: 400px;
   background-size: cover;
   color: black;
