--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,17 @@
             <%= link_to("メンバーズ", users_path) %>
           </li>
           <li class="dropdown"> 
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">グループ<b class="caret"></b></a>
+            <ul class=" dropdown-menu">
+              <li class="groups">
+                <%= link_to("グループ", groups_path) %>
+              </li>
+              <li id="accout">
+              　<%= link_to("新規作成", new_group_path ) %>
+            　</li>
+            </ul>
+          </li>
+          <li class="dropdown"> 
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">アカウント<b class="caret"></b></a>
             <ul class=" dropdown-menu">
               <li id="accout">
