--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,21 +16,40 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
- @mixin box_sizing {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+
+
 
 * {
   font-family: sans-serif;
   list-style: none;
+  box-sizing: content-box; 
 }
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
+  resize: vertical;
   margin-bottom: 15px;
-  @include box_sizing;
+  
+  ;
+}
+.btn {
+  padding: initial;
+  width:fit-content;
+}
+.main_body {
+  height: auto;
+}
+h2 {
+  color: black;
+  padding-left: 150px;
+}
+.row {
+  margin-left: 15px;
+}
+textarea {
+  height: 250px;
+  white-space: pre-wrap;
+  width: 300px;
 }
 .nav {
   li {
@@ -40,7 +59,20 @@ input, textarea, select, .uneditable-input {
 
 .header {
   margin-left: 50px;
+  
 }
+.main_form {
+    color: #474747;
+    background: whitesmoke;/*背景色*/
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.22);
+}
+.comment-form {
+  color: black;
+  margin-left: -150px;
+  box-sizing: initial; 
+  width:200px;
+}
+
 #logo {
   float: left;
   margin-right: 10px;
@@ -51,6 +83,9 @@ input, textarea, select, .uneditable-input {
   padding-top: 9px;
   font-weight: bold;
 }
+input.btn {
+  padding : -6px -12px;
+}
 
 input {
   height: auto !important;
@@ -58,26 +93,72 @@ input {
 
 body {
   padding-top: 50px;
-  //background-image: url('background1.jpg');
-  background-color: #b3d4fc;
-  height: 400px;
+  /*background-image: url('background1.jpg');*/
   background-size: cover;
   color: black;
   .fill_form {
     margin: 0 auto;
     text-align: center;
     backdrop-filter: blur(10px);
-    .form {
-      
-    }
+    height: 650px;
+  }
+  section {
+    margin-bottom: 30px;
+    
+  }
+  footer {
+    background-color: black;
+    height: 80px;
+    text-align: center;
+    font-size: 20px;
   }
 }
 
-form {
-  text-align: center;
+.post {
+  background-color: #f8f8f8;
+  color: black;
+  border-radius: 8px;
+  border-top: solid 5px #5d627b;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.22);
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+  height: 400px;
+  width: 300px;
+  .title {
+    
+  }
+  .post_content {
+    padding-top: 10px;
+  }
+  .links {
+    margin-top: 50px;
+  }
 }
 
+.small_title {
+  padding-left: 35px;
+}
+form {
+  text-align: center;
+  padding-left: 150px;
+  width: 300px;
+  padding-bottom: 50px;
+}
 
+.login_form {
+  margin-left: 250px;
+}
+
+.new_form {
+  margin-left: 270px;
+}
+.time_field {
+  width: auto;
+  color: black;
+  display: inline-flex;
+  
+}
 /*error form*/
 #error_explanation {
   color: red;
@@ -102,7 +183,8 @@ form {
   margin-left: 0;
 }
 .link {
-  color: white;
+  color: lightblue;
+  
 }
 
 .users {
@@ -117,4 +199,16 @@ form {
 
 .micropost {
   color: black;
+}
+.new_like, .edit_like {
+  margin-left: -60px;
+  margin-bottom: -10px;
+  margin-top: -10px;
+}
+.field_with_errors {
+  display: contents;
+}
+
+.comment_list {
+  border-bottom: 1px solid black;
 }
