--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,8 @@
 <% @groups.each do |group| %>
-  <%= link_to group.name,  edit_group_path(group) %>
+  <p><%= group.name %></p>
+  <%= link_to "編集",  edit_group_path(group) %>
+  <%= link_to "削除", group, method: :delete, data: { confirm: "削除を実行しますか？"} %>
+  <%= group.users.each do |user| %>
+    <%= user.name %>
+  <% end %>
 <% end %>
