--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,15 @@
   <body>
     <section>
       <%= render 'layouts/header' %>
-      <div class="container" style="margin-top: 30px;">
+      <div class="container main_body" style="margin: 30px;">
         <% flash.each do |message_type, message| %>
           <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>  
         <%= yield %>
         <%= debug(params) if Rails.env.development? %>
       </div>
-    </section>  
-  </body>
+    </section>
+    <footer>
+      <%= render 'layouts/footer' %> 
+    </footer>
 </html>
