--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,20 +1,19 @@
 <% if !current_user?(micropost.user) %>
-    <span class="like">
+  <span class="like">
     <% if micropost.read?(current_user) %>
       <%= form_for(micropost.likes.find_by(user_id: current_user.id), method: :delete, remote: true) do |f| %>
         <%= button_tag(class: "btn btn-default btn-xs") do %>
-          <%= content_tag :span, "未読に戻す", class: "glyphicon glyphicon-heart" %>
+          <%= content_tag :span, "未読に戻す", class: "glyphicon glyphicon-remove" %>
         <% end %>
       <% end %>
-      <p><%= micropost.likes.count %>人が確認しました。</p>
     <% else %>
       <%= form_for(micropost.likes.build, remote: true) do |f| %>
         <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
         <%= button_tag(class: "btn btn-default btn-xs") do %>
-          <%= content_tag :span, "既読にする", class: "glyphicon glyphicon-heart-empty" %>
+          <%= content_tag :span, "既読にする", class: "glyphicon glyphicon-ok" %>
         <% end %>
-      <% end %>
-      <p><%= micropost.likes.count %>人が確認しました。</p>
+      <% end %>    
     <% end %>
+    <p><%= micropost.likes.count %>人が確認しました。</p>
   </span>
 <% end %>
