--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,29 +1,41 @@
-<li>
-  <%= link_to gravatar_for(@micropost.user, size: 50), @micropost.user %>
-  <span class="user"><%= link_to @micropost.user.name, @micropost.user %></span>
-  <span class="content">
-    <%= @micropost.content %>
-    <%= image_tag @micropost.display_image if @micropost.image.attached? %>
-  </span>
-  <span><%= time_ago_in_words(@micropost.created_at) %>前に投稿されました.</span>
-  <% if current_user?(@micropost.user) %>
+
+<div>
+    <%= link_to gravatar_for(@micropost.user, size: 50), @micropost.user %>
+    <span class="user"><%= link_to @micropost.user.name, @micropost.user %></span>
+    <span>
+      <p class="title">タイトル：<%= @micropost.title %></p>
+    </span>
+    <span>
+      <p class="title">活動時間:</span>
+        <%= @micropost.start_time.strftime("%H:%M") %> ~
+        <%= @micropost.finish_time.strftime("%H:%M") %>
+      </p>
+    </span>
+    <span class="content">
+      <p class="title">
+      <%= @micropost.content %>
+      <%= image_tag @micropost.display_image if @micropost.image.attached? %>
+      </p>
+    </span>
+    </br>
+    <span class="content"><%= time_ago_in_words(@micropost.created_at) %>前に投稿されました.</span> 
+    <% if current_user?(@micropost.user) %>
+    <%= link_to "編集", edit_micropost_path(@micropost) %>
     <%= link_to "削除する", @micropost, method: :delete, data: { confirm: "削除を実行しますか？"} %>
-  <% end %>
-</li>
+    <% end %>
 <div class="comment-form">
   <%= form_with(model: [@micropost, @comment], local: true) do |f| %>
     <div class="field">
-      <%= f.text_area :content %>
+      <%= f.text_field :content, placeholder: "コメントを入力" %>
     </div>
     <%= f.submit "コメントする", class: "btn btn-primary" %>
   <% end %>
 </div>
 <div>
   <% @comments.each do |comment| %>
-    <p>
-      <%= comment.user.name %>
+    <p class="comment_list">
+    　 <%= comment.user.name %> <span class="glyphicon glyphicon-comment" ></span>
       <%= comment.content %>
-      <spna><%= time_ago_in_words(comment.created_at) %>前に投稿されました.</span>
     </p>
   <% end %>  
 </div>
