--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -2,5 +2,7 @@
   <ol class="microposts">
     <%= render @feed_items %>
   </ol>
-  <%= will_paginate @feed_items %>
 <% end %>
+  <div class="col-md-12">
+    <%= will_paginate @feed_items %>
+  </div>
