--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,12 +2,12 @@
 <div class="container fill_form">
   <h1>アカウント登録</h1>
   <div class="row">
-    <div class="col-md-6 col-md-offset-3 form">
+    <div class="col-md-6 form new_form">
       <%= form_with(model: @user, local:true ) do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
 
         <%= f.label :名前 %>
-        <%= f.text_field :name, class: 'form-control' %>
+        <%= f.text_field :name, class: 'form-control', size: 200 %>
 
         <%= f.label :email %>
         <%= f.email_field :email, class: 'form-control' %>
@@ -21,5 +21,6 @@
         <%= f.submit "アカウントを作成する", class: "btn btn-default" %>
       <% end %>
     </div>
+
   </div>
 </div>  
