--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,9 @@
             <li>Team A, Osaka branch</li>
           </ul>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-12">
           <% if @user.microposts.any? %>
-            <h3>Microposts (<%= @user.microposts.count %>)</h3>
+            <h3>これまでの日報 (<%= @user.microposts.count %>)</h3>
             <ol class="microposts">
               <%= render @microposts %>
             </ol>
