--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -2,10 +2,13 @@
   <p><%= group.name %></p>
   <%= link_to "編集",  edit_group_path(group) %>
   <%= link_to "削除", group, method: :delete, data: { confirm: "削除を実行しますか？"} %>
+  <%= link_to '参加', join_group_path(group) %>
+  <%= link_to '解除', leave_group_path(group) %>
   <p>
-    <% group.users.each do |user| %>
-      <%= user.name %>
+   <h5><%= group.users.count %>人が参加しております</h5>
+   <% group.users.each do |user| %>
+      <li> <%= user.name %></li>
     <% end %>
-  <% end %>
+   <% end %>
   </p>
 
