--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -6,7 +6,7 @@
   </div>
   <span class="glyphicon glyphicon-time" style="color: black"></span>
   <div class="time_field">
-     <%= f.time_select :start_time %> ~  <%= f.time_select :finish_time %>
+     <%= f.time_select :start_time %> <p>~</p>  <%= f.time_select :finish_time %>
   </div>
   <div class="field, text_field">
     <%= f.text_area :content, value: "報告内容: " %>
