--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,12 +30,11 @@ input, textarea, select, .uneditable-input {
   width: 100%;
   resize: vertical;
   margin-bottom: 15px;
-  
-  ;
 }
 .btn {
   padding: initial;
   width:fit-content;
+　color:white;
 }
 .main_body {
   height: auto;
@@ -45,7 +44,7 @@ h2 {
   padding-left: 150px;
 }
 .row {
-  margin-left: 15px;
+  
 }
 textarea {
   height: 250px;
@@ -55,21 +54,76 @@ textarea {
 .nav {
   li {
     padding-right: 15px;
+    margin: initial;
+    margin-top: 15px;
   }
+}
+.chart {
+  padding-top: 30px;
 }
 
 .header {
   margin-left: 50px;
+  font-size: 3.0rem;
+  font-style: italic;
+  letter-spacing: .1em;
+  color: 5588a3;
+  text-shadow: -3px 2px 0 #bbb;
+}
+.sectiontitle {
   
+  text-align: center;
+  font-size: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  text-shadow: 0 1px 0 #ccc, 0 3px 0 #ccc, 0 4px 10px rgba(0, 0, 0, .2);
+  h2 {
+    font-size: 40px;
+    margin-left: -100px;
+  }
+}
+.mainsection {
+  text-align: center;
+}
+.circle{
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  background: #f5f5f5;
+  text-align: center;
+  margin-left: 170px;
 }
 .main_form {
     color: #474747;
-    background: whitesmoke;/*背景色*/
+    background: #e8e8e8;/*背景色*/
+    padding: 15px;
+    border-radius: 30px 0 10px 0;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.22);
 }
+.subtitle {
+  position: relative;
+  display: inline-block;
+  margin: 1rem 0 1rem -10px;
+  padding: 1rem 3rem;
+  color: #fff;
+  border-radius: 0 100vh 100vh 0;
+  background: #145374;
+  -webkit-box-shadow: 3px 3px 5px rgba(0, 0, 0, .2);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, .2);
+}
+  .subtitle:before {
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 0;
+  height: 0;
+  content: '';
+  border-top: 10px solid #005276;
+  border-left: 10px solid transparent;
+}
+
 .comment-form {
   color: black;
-  margin-left: -150px;
   box-sizing: initial; 
   width:200px;
 }
@@ -94,10 +148,10 @@ input {
 
 body {
   padding-top: 50px;
-  background-color: #f0f8ff;
-  background-size: cover;
+  background: #5588a3; /* fallback for old browsers */
   color: black;
-  margin: 0;
+  margin: 0 auto;
+  margin-top: 45px;
     display: flex;
     flex-flow: column;
     min-height: 100vh;
@@ -110,6 +164,7 @@ body {
   section {
     margin-bottom: 30px;
     flex: 1;
+    
   }
   footer {
     background-color: black;
@@ -121,7 +176,7 @@ body {
 }
 
 .post {
-  background-color: #f8f8f8;
+  background-color: white;
   color: black;
   border-radius: 8px;
   border-top: solid 5px #5d627b;
@@ -148,9 +203,9 @@ body {
 }
 form {
   text-align: center;
-  padding-left: 150px;
+  
   width: 300px;
-  padding-bottom: 50px;
+  margin: 0 auto;
 }
 
 .login_form {
@@ -200,6 +255,24 @@ form {
     overflow: auto;
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
+    div {
+      display: flex;
+      justify-content: space-evenly;
+      justify-content: flex-start;
+      font-size: 125%;
+      span {
+        width: 25%;
+        padding-top: 25px;
+        color: white;
+      }
+      
+    }
+  }
+}
+
+.userindex {
+  .nameindex {
+    
   }
 }
 
@@ -222,10 +295,32 @@ form {
   }
 }
 
+.groupindex {
+  margin-top: 25px;
+  margin-bottom: 25px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid;
+  border-color: #e8e8e8; 
+    h3 {
+      margin-right: 20px;
+    }
+    h4 {
+      padding-bottom: 20px;
+    }
+    li {
+      display: inline;
+      padding: 15px;
+      margin-right: 15px;
+      margin-top: 45px;
+      background-color: #e8e8e8;
+      border-radius: 50%;
+      text-align: center;
+  }
+}
 
 .simple-calendar {
+  
   .day {}
-
   .wday-0 {color: red;}
   .wday-1 {}
   .wday-2 {}
@@ -233,16 +328,18 @@ form {
   .wday-4 {}
   .wday-5 {}
   .wday-6 {color: blue}
-
   .today {}
   .past {}
   .future {}
-
   .start-date {}
-
   .prev-month {}
   .next-month { }
   .current-month {}
-
   .has-events {}
+}
+table {
+  thead {
+    background-color: #00334e;
+    color: white;
+  }
 }
