--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,14 +1,11 @@
+<h1 class="subtitle">グループ管理</h1>
 <% @groups.each do |group| %>
-  <p><%= group.name %></p>
-  <%= link_to "編集",  edit_group_path(group) %>
-  <%= link_to "削除", group, method: :delete, data: { confirm: "削除を実行しますか？"} %>
-  <%= link_to '参加', join_group_path(group) %>
-  <%= link_to '解除', leave_group_path(group) %>
-  <p>
-   <h5><%= group.users.count %>人が参加しております</h5>
-   <% group.users.each do |user| %>
-      <li> <%= user.name %></li>
-    <% end %>
-   <% end %>
-  </p>
-
+  <div class="groupindex">
+    <h3><span class="glyphicon glyphicon-tags" aria-hidden="true"></span>　<%= group.name %></h3>
+    　　<h4>所属人数 <%= group.users.count %>人</h4>
+      <li><%= link_to "編集",  edit_group_path(group) %></li>
+      <li><%= link_to "削除", group, method: :delete, data: { confirm: "削除を実行しますか？"} %></li>
+      <li><%= link_to '参加', join_group_path(group) %></li>
+      <li><%= link_to '解除', leave_group_path(group) %></li>
+  </div>
+  <% end %>
