--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript">
-</script>    
+　　</script>  
+　　<style type="text/css">
+    <!--
+    a:link  { color : #000080; }
+    a:visited  { color : #000080; }
+    -->
+    </style>  
   </head>
   <body>
     <section>
       <%= render 'layouts/header' %>
-      <div class="container main_body" style="margin: 30px;">
+      <div class="container main_body">
         <% flash.each do |message_type, message| %>
           <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>  
