--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,31 +6,29 @@
     <%= csp_meta_tag %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
-    </script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">　
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript">
 　　</script>  
+　　<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+　　<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+　　<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 　　<style type="text/css">
     <!--
-    a:link  { color : #000080; }
-    a:visited  { color : #000080; }
+    a:link  { color : #000000; }
+    a:visited  { color : #000000; }
     -->
     </style>  
   </head>
   <body>
-    <section>
-      <%= render 'layouts/header' %>
-      <div class="container main_body">
+    <%= render 'layouts/header' %>
+      <div class="main_body">
         <% flash.each do |message_type, message| %>
           <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>  
         <%= yield %>
         <%= debug(params) if Rails.env.development? %>
       </div>
-    </section>
     <footer>
       <%= render 'layouts/footer' %> 
     </footer>
-  
 </html>
