add gemfile foreman

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
     a:link  { color : #000000; }
     a:visited  { color : #000000; }
     -->
-    </style>  
+    </style>
+    <%= javascript_pack_tag 'hello_vue' %>
+　　<%= stylesheet_pack_tag 'hello_vue'  %> 
   </head>
   <body>
     <%= render 'layouts/header' %>
