--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -23,12 +23,12 @@
       </div>
   </div>
 <% else %>
-  <header class="bg-primary text-white">
-    <div class="container text-center">
-      <h1>Daily Report</h1>
-      <p class="lead">SNS型社内日報アプリでリアルタイムな情報共有</p>
-    </div>
-  </header>
+<div id='hello'>
+  {{message}}
+   <app></app>
+ </div>
+  
+ 
 
   <section id="about">
     <div class="container">
@@ -39,18 +39,5 @@
       </div>
     </div>
   </section>
-
-  <section id="purpose" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <p class="lead">日報1つ提出するにも時間と労力が掛かります。
-          <br>本来の目的とは別に、日報を書くことが目的となってしまいがちです。　
-          <br>Daily Reportを使うことで、情報共有を密にし
-          <br>生産性の向上になることを願っております。</p>
-        </div>
-      </div>
-    </div>
-  </section>
-  
+    
 <% end %>
