--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,9 +27,6 @@ section {
   text-align: center;
   margin: 0 auto;
 }
-.explain {
-  
-}
  
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
@@ -61,10 +58,6 @@ textarea {
   height: 250px;
   white-space: pre-wrap;
   width: 300px;
-}
-
-.chart {
-  padding-top: 30px;
 }
 
 .header {
@@ -152,7 +145,9 @@ input {
 body {
   background: white; 
   color: black;
-  margin: 0 auto;
+  margin: 20px;
+  width: 100%;
+   max-width: 100%;
     display: flex;
     flex-flow: column;
     min-height: 100vh;
