--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,6 +42,9 @@
           <li class="nav-item">
         　　 <%= link_to "ログイン", login_path %>
           </li>
+          <li class="nav-item">
+        　　 <%= link_to "ゲストログイン", guest_sessions_path, method: :post%>
+          </li>
         <% end %>
       </ul>
     </div>
